package ru.n4d9.transmitter;

/**
 * Слушатель отправителя данных, используется для регистрации событий отправителя
 */
public interface SenderListener {
    /**
     * Вызывается, если отправитель успешно отправил данные
     */
    void onSuccess();

    /**
     * Вызывается каждый раз, когда изменилось состояние прогресса отправки.
     * Точность данных и факт вызов этой функции не гарантируются.
     * @param progress отношение отправленных данных к данным, которые нежно отправить (от 0 до 1)
     */
    void onProgress(float progress);

    /**
     * Вызывается, когда отправка прошла неуспешно
     * @param message сообщение об ошибке
     */
    void onError(String message);
}
