@startuml

title __UDP's Class Diagram__\n

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.UDP {
        class Receiver {
            {static} - HEAD_SIZE : int
            {static} - CONTENT_SIZE : int
            {static} - PIECE_SIZE : int
            - socket : DatagramSocket
            - channel : DatagramChannel
            - useChannel : boolean
            - listeningThread : Thread
            - collectors : HashMap<Integer, PieceCollector>
            - listeningRunnable : Runnable
            + Receiver()
            + setListener()
            + startListening()
            + stopListening()
            - processIncomingPacket()
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.UDP {
        class PieceCollector {
            - requestID : int
            - address : InetAddress
            - packets : SortedSet<MarkedUpPacket>
            ~ PieceCollector()
            ~ collect()
            - collected()
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.UDP {
        class MarkedUpPacket {
            ~ num : int
            ~ all : int
            ~ len : int
            ~ req_id : int
            ~ data : byte[]
            ~ MarkedUpPacket()
            + compareTo()
            + equals()
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.UDP {
        interface ReceiverListener {
            {abstract} + received()
            {abstract} + exceptionThrown()
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.UDP {
        class Sender {
            {static} - HEAD_SIZE : int
            {static} - CONTENT_SIZE : int
            {static} - PIECE_SIZE : int
            + Sender()
            {static} + send()
            {static} - sendViaDatagram()
            {static} - sendViaChannel()
            {static} - generateDatagramPackets()
            {static} - getNextRequestID()
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.UDP {
        interface SenderListener {
            {abstract} + onSuccess()
            {abstract} + onProgress()
            {abstract} + onError()
        }
      }
    }
  }
  

  Receiver o-- ReceiverListener : listener
  Receiver +-down- PieceCollector
  PieceCollector +-down- MarkedUpPacket
  MarkedUpPacket -up-|> Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
